--- a/MathGame/dex.html
+++ b/MathGame/dex.html
@@ -138,6 +138,7 @@
 			<button class="btn" onclick="filterSelection(' mega ')"> Mega</button>
 			<button class="btn" onclick="filterSelection('gigantamax')"> Gigantamax</button>
 			<button class="btn" onclick="filterSelection('-H')"> Halloween</button>
+			<button class="btn" onclick="filterSelection('-C')"> Christmas</button>
 			<button class="altbtn typedropdown" id="typedropdown"> Typer &#x25BC;
 				<div class="typecontent">
 					<a class="typecard2 type-bug btn" onclick="filterSelection('bug')"> Bug</a>
@@ -169,9 +170,8 @@
 
 	<div class="columns is-multiline is-mobile" id="pokedex">
 		Laster...<br><br>
-		Hvis innlastningen varer mer enn 30 sekunder, vennligst vurder å rapportere en feil.
     </div>
-	<div class="columns is-multiline is-mobile" id="dexLoadStatus">
+	<div class="center" id="dexLoadStatus">
 		-
     </div>
 	
