--- a/MathGame/pokemath.html
+++ b/MathGame/pokemath.html
@@ -162,6 +162,8 @@
 	<div class="center" style="margin: auto; align-items: center; text-align: center">
 		<a class="button-1 center" style="left: 50%; right: 50%; margin: auto;" href="./dex.html">Klikk her for å se alle dine pokemon.</a>
 	</div>
+
+	<div class="xmas-present floating"></div>
 	
 	
 	<div class="overlay">
