--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -167,7 +167,7 @@
 			<h2 class="section-title">Kontakt</h1>
 			<p>
 				Kontaktinformasjon:<br>
-				Mail: tirco@tirco.tv (marker meldingen med pokemath)<br><br>
+				Mail: <a href="mailto:contact@pokemath.online">contact@pokemath.online</a><br>Hvis du har et problem du trenger hjelp til å løse, så er mailen det beste alternativet. Vi sjekker mailboxen daglig, men det kan ta litt tid å svare. (PokeMath er en hobby, ikke en jobb!)<br><br>
 				Du kan også legge igjen en feilmelding på <a href="https://forms.gle/Vi1VZ37R3UwfSpbu9">denne lenken</a> (Google Forms),<br>
 				eller en generel tilbakemelding på <a href="https://forms.gle/KJo37sLgL9St4m2D6">denne lenken</a> (Google Forms).
 				<div id="donate-button-container">
@@ -196,11 +196,20 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h1>
+				<p>25.11.2022</p>
+				- La til en feilmelding på nettlesere som ikke har JavaScript på.<br>
+				- La til jule-eventet. Du kan nå finne gaver mens du løser oppgaver.<br>
+				- Lagde en julekalender.<br>
+				- La til en hilsen til de som er litt ekstra nyskjerrige i Developer Tools<br>
+				- Removed Herobrine... Nei vent... Feil spill.<br>
+				- Endret utseendet på ikonene på startsiden. De er nå litt mindre masete, og det er lettere å se flere av knappene.<br>
+				- La til noen hemmeligheter. (Missing No.)<br>
+				- Ordnet ny e-post adresse! Wooo! Vi har nå en egen pokemath epost!<br>
 				<p>02.11.2022</p>
-				- Halloween-eventet er automatisk fjernet.
-				- Oppdaterte Customizer (lag ditt eget nivå).
-				- Gjorde slik at gjentatte pokemon som er shiny, legendarisk eller mytisk gir ekstra mye penger.
-				- Gikk igjennom sjansene for legendarisk, mytisk og shiny.
+				- Halloween-eventet er automatisk fjernet.<br>
+				- Oppdaterte Customizer (lag ditt eget nivå).<br>
+				- Gjorde slik at gjentatte pokemon som er shiny, legendarisk eller mytisk gir ekstra mye penger.<br>
+				- Gikk igjennom sjansene for legendarisk, mytisk og shiny.<br>
 				<p>16.10.2022</p>
 				- Forbedret måten pokemon lagres og lastes inn på, slik at belastningen på spillet blir mindre.<br>
 				- La til en fiks for når man bruker frem og tilbake navigasjon.<br>
