--- a/MathGame/pokemath.html
+++ b/MathGame/pokemath.html
@@ -17,6 +17,11 @@
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
 <div class="main">
+	<noscript>
+		<div style="border: 1px solid purple; padding: 10px">
+		  <span style="color:red">JavaScript er ikke aktivert! PokeMath trenger å bruke JavaScript for å fungere. Du kan lese mer om hvordan man kan skru på JavaScript <a href="https://support.microsoft.com/nb-no/office/aktivere-javascript-7bb9ee74-6a9e-4dd1-babf-b0a1bb136361">her. (microsoft.com)</a></span>
+		</div>
+	</noscript>
 	<div class="cookie-container" id="cookie-container">
 		<h2 class="cookie-header">Cookie Policy</h2>
 		<div class="">
