--- a/MathGame/shop.html
+++ b/MathGame/shop.html
@@ -379,6 +379,34 @@
 				</span>
 			</div>
 		</div>
+		<div class="carousel-cell" style="background-image: url('images/backgrounds/bg-019.png');">
+			<div class="carousel-caption" id="bg-019">
+				<h3>Julebakgrunn #1</h3>
+				<a class="pricetag" data-price="250 000"> </a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="shopButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="shopButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne bakgrunnen kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/backgrounds/bg-020.png');">
+			<div class="carousel-caption" id="bg-020">
+				<h3>Julebakgrunn #2</h3>
+				<a class="pricetag" data-price="500 000"> </a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="shopButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="shopButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne bakgrunnen kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
 	</div>
 	<button class="button-1 use centerposition" onClick="shopButtonUse()">Fjern Bakgrunn</button>
 	<br>
