--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -205,6 +205,8 @@
 				- Endret utseendet på ikonene på startsiden. De er nå litt mindre masete, og det er lettere å se flere av knappene.<br>
 				- La til noen hemmeligheter. (Missing No.)<br>
 				- Ordnet ny e-post adresse! Wooo! Vi har nå en egen pokemath epost!<br>
+				- Oppdaterte pokedexen så den laster inn mye raskere om du går tilbake til den!<br>
+				- Endret på rammen til mytiske og legendariske pokemon.<br>
 				<p>02.11.2022</p>
 				- Halloween-eventet er automatisk fjernet.<br>
 				- Oppdaterte Customizer (lag ditt eget nivå).<br>
