Update to live version

--- a/MathGame/index.html
+++ b/MathGame/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=23">
-	<link rel="stylesheet" href="menustyle.css?v=23">
+	<link rel="stylesheet" href="globalstyle.css?v=24">
+	<link rel="stylesheet" href="menustyle.css?v=24">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<meta name="title" content="Pokemath">
 	<meta name="description" content="En nettside hvor man kan øve på de fire regneartene og få informasjon om ulike pokemon når man løser nok oppgaver.">
@@ -270,29 +270,32 @@
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
 
-<div id="alertbox" class="alert simple-alert is-hidden"> <!-- is-hidden if hidden-->
-	<h3>November <a class="date">02.11.2022</a></h3>
-	<p>Nå er vi over i November, og det betyr at Halloween-egget er borte for denne gang! <br>
-	Men frykt ikke, det kommer nok tilbake neste år, med flere skumle pokemon.<br><br>
-	Noen har spurt oss om det er noe poeng i å spille på vanskeligere nivåer, og det er det!<br><br>
-	På høyere nivåer får man:<br>
-	- flere mynter pr oppgave.<br>
-	- høyere sjanse for legendarisk, mytisk og shiny.<br>
-	- høyere sjanse for å få noen av de spesielle variantene.</p>
-	Vi ønsker alltid at man skal spille så vanskelig man klarer, men vil heller ikke demotivere de som ikke klarer å løse regnestykker med multiplikasjon eller divisjon.
-	Derfor anbefaler vi at lærere lager <a href="./customizer.html">egendefinerte oppgavesett</a> som de deler ut til elevene, enten ved bruk av lenker eller QR-Koder.<br>
+<div id="alertbox" class="alert simple-alert is-hidden-"> <!-- is-hidden if hidden-->
+	<h3>Nedtelling til Jul! <a class="date">26.11.2022</a></h3>
+	<p>Nå er det mindre enn en måned til Jul, så vi har dyttet ut en oppdatering.<br>
+	I hele desember kommer man til å kunne få tak i spesielle event pokemon! Dette kan man gjøre på 2 måter:<br><br>
+	<b>1) - Julekalenderen!</b><br>
+	I år har vi har laget en julekalender!<br>
+	En julekalenderluke kan kun åpnes på riktig dag, så pass på at du sjekker innom hver dag frem til jul!<br>
+	I kalenderen kan man få mynter, pokemon og bakgrunner.
+	<br><br>
+	<b>2) - Gaver!</b><br>
+	På oppgavesiden vil det dukke opp gaver på tilfeldige steder på siden!<br>
+	Gavene kommer etter en stund når man løser opgaver.<br>
+	Man kan få 37 forskjellige pokemon, inkludert de pokemonene man kan få i julekalenderen.<br>
+	Fra gavene vil man bare få event-pokemon, og ingen andre typer pokemon.<br>
+	Det går fortere å få gavene om man spiller på vanskeligere nivåer.<br>
 	<br>
-	2.trinn på Nordby skole har spurt om vi kan legge inn bedre kontroll på leddene i addisjon og subtraksjon i "lag ditt eget". Det har vi ordnet, og takker for den gode idèen!<br>
-	<br>
-	Noen spurte oss om vi kunne gjøre slik at om du får en shiny, mytisk eller legendarisk du har fra før, så får du ekstra mye penger, og det tenkte vi var en god idè, så det har vi ordnet!<br><br>
-	Gjentatt legendarisk eller shiny vil nå gi deg 2x mynter, mytisk gir deg 3x. Får du en shiny & legendarisk så vil det bli 4x, shiny mytisk blir 6x. Skuffelsen blir altså ikke like stor nå om du får en legendarisk som du hadde fra før!<br>
+	Alt dette skal automatisk dukke opp på pokemath den 1. desember. Hvis det ikke dukker opp for deg, sjekk ut <a href="faq.html">FAQ-en</a> vår for hjelp.
+
+</p>
 	<a class="close" onclick="closeAlert()">&times;</a>
 	<br>
 	- Mvh. PokeMorten
 	<br>
 </div>
-	  <script src="global.js?v=23"></script>
-	  <script src="menu.js?v=23"></script>
+	  <script src="global.js?v=24"></script>
+	  <script src="menu.js?v=24"></script>
 </body>
 
 </html>
