--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -11,10 +11,10 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="Tirco">
-	<link rel="stylesheet" href="globalstyle.css?v=23">
+	<link rel="stylesheet" href="globalstyle.css?v=24">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-	<link rel="stylesheet" href="menustyle.css?v=23">
-	<link rel="stylesheet" href="about.css?v=23">
+	<link rel="stylesheet" href="menustyle.css?v=24">
+	<link rel="stylesheet" href="about.css?v=24">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -207,6 +207,7 @@
 				- Ordnet ny e-post adresse! Wooo! Vi har nå en egen pokemath epost!<br>
 				- Oppdaterte pokedexen så den laster inn mye raskere om du går tilbake til den!<br>
 				- Endret på rammen til mytiske og legendariske pokemon.<br>
+				- Fikset fonten som er på forside splash-teksten, slik at den er lik på flere enheter.<br>
 				<p>02.11.2022</p>
 				- Halloween-eventet er automatisk fjernet.<br>
 				- Oppdaterte Customizer (lag ditt eget nivå).<br>
@@ -447,7 +448,7 @@
 </div>
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=23"></script>
+	  <script src="global.js?v=24"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
 	  <script async src="https://api.countapi.xyz/hit/pokemath.online/aboutVisited?callback=cb"></script>
 </body>
