--- a/MathGame/christmas.html
+++ b/MathGame/christmas.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=23">
+	<link rel="stylesheet" href="globalstyle.css?v=24">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-	<link rel="stylesheet" href="christmas.css?v=23">
+	<link rel="stylesheet" href="christmas.css?v=24">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -124,10 +124,10 @@
 	<div class="calendar-container calendar-grid">
 </div>
 
-<script src="global.js?v=23"></script>
-<script src="christmas.js?v=23"></script>
-<script src="pokestuff.js?v=23"></script>
-<script src="alternateforms.js"></script>
+<script src="global.js?v=24"></script>
+<script src="christmas.js?v=24"></script>
+<script src="pokestuff.js?v=24"></script>
+<script src="alternateforms.js?v=24"></script>
 </body>
 
 </html>
