--- a/MathGame/dex.html
+++ b/MathGame/dex.html
@@ -10,9 +10,9 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="Tirco">
-	<link rel="stylesheet" href="globalstyle.css?v=24">
-	<link rel="stylesheet" href="dex.css?v=24">
-	<link rel="stylesheet" href="pokemon.css?v=24">
+	<link rel="stylesheet" href="globalstyle.css?v=26">
+	<link rel="stylesheet" href="dex.css?v=26">
+	<link rel="stylesheet" href="pokemon.css?v=26">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
@@ -138,7 +138,8 @@
 			<button class="btn" onclick="filterSelection(' mega ')"> Mega</button>
 			<button class="btn" onclick="filterSelection('gigantamax')"> Gigantamax</button>
 			<button class="btn" onclick="filterSelection('-H')"> Halloween</button>
-			<button class="btn" onclick="filterSelection('-C')"> Christmas</button>
+			<button class="btn" onclick="filterSelection('-C')"> Jul</button>
+			<button class="btn" onclick="filterSelection('-U')"> Unik</button>
 			<button class="altbtn typedropdown" id="typedropdown"> Typer &#x25BC;
 				<div class="typecontent">
 					<a class="typecard2 type-bug btn" onclick="filterSelection('bug')"> Bug</a>
@@ -186,12 +187,12 @@
 	</div>
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=24"></script>
+	  <script src="global.js?v=26"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
-	  <script src="pokemondata.js?v=24"></script>
-	  <script src="alternateforms.js?v=24"></script>
-	  <script src="pokestuff.js?v=24"></script>
-	  <script src="dex.js?v=24"></script>
+	  <script src="pokemondata.js?v=26"></script>
+	  <script src="alternateforms.js?v=26"></script>
+	  <script src="pokestuff.js?v=26"></script>
+	  <script src="dex.js?v=26"></script>
 	  <script async src="https://api.countapi.xyz/hit/pokemath.online/dexVisited?callback=cb"></script>
 </body>
 
