--- a/MathGame/shop.html
+++ b/MathGame/shop.html
@@ -10,9 +10,9 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="Tirco">
-	<link rel="stylesheet" href="globalstyle.css?v=24">
-	<link rel="stylesheet" href="menustyle.css?v=24">
-	<link rel="stylesheet" href="shop.css?v=24">
+	<link rel="stylesheet" href="globalstyle.css?v=26">
+	<link rel="stylesheet" href="menustyle.css?v=26">
+	<link rel="stylesheet" href="shop.css?v=26">
 	<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </head>
 <body>
@@ -382,7 +382,7 @@
 		<div class="carousel-cell" style="background-image: url('images/backgrounds/bg-019.png');">
 			<div class="carousel-caption" id="bg-019">
 				<h3>Julebakgrunn #1</h3>
-				<a class="pricetag" data-price="250 000"> </a>
+				<a class="pricetag" data-price="500 000"> </a>
 				<br>
 				<br>
 				<button class="button-1 buy" onClick="shopButtonBuy(this)">Kjøp</button>
@@ -396,7 +396,49 @@
 		<div class="carousel-cell" style="background-image: url('images/backgrounds/bg-020.png');">
 			<div class="carousel-caption" id="bg-020">
 				<h3>Julebakgrunn #2</h3>
-				<a class="pricetag" data-price="500 000"> </a>
+				<a class="pricetag" data-price="100 000"> </a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="shopButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="shopButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne bakgrunnen kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/backgrounds/bg-021.png');">
+			<div class="carousel-caption" id="bg-021">
+				<h3>Julebakgrunn #3</h3>
+				<a class="pricetag" data-price="50 000"> </a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="shopButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="shopButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne bakgrunnen kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/backgrounds/bg-022.png');">
+			<div class="carousel-caption" id="bg-022">
+				<h3>Julebakgrunn #4</h3>
+				<a class="pricetag" data-price="50 000"> </a>
+				<br>
+				<br>
+				<button class="button-1 buy" onClick="shopButtonBuy(this)">Kjøp</button>
+				<button class="button-1 disabled use" onClick="shopButtonUse(this)">Bruk</button>
+				<br>
+				<span class="hovertext" data-hover="Denne bakgrunnen kan du bruke på hele nettsiden!">
+					?
+				</span>
+			</div>
+		</div>
+		<div class="carousel-cell" style="background-image: url('images/backgrounds/bg-023.png');">
+			<div class="carousel-caption" id="bg-023">
+				<h3>Lapras</h3>
+				<a class="pricetag" data-price="50 000"> </a>
 				<br>
 				<br>
 				<button class="button-1 buy" onClick="shopButtonBuy(this)">Kjøp</button>
@@ -803,8 +845,8 @@
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
 
-	  <script src="global.js?v=24"></script>
-	  <script src="shop.js?v=24"></script>
+	  <script src="global.js?v=26"></script>
+	  <script src="shop.js?v=26"></script>
 	  <script async src="https://api.countapi.xyz/hit/pokemath.online/shopVisited?callback=cb"></script>
 </body>
 
