--- a/MathGame/stats.html
+++ b/MathGame/stats.html
@@ -10,9 +10,9 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="Tirco">
-	<link rel="stylesheet" href="./globalstyle.css?v=24">
-	<link rel="stylesheet" href="./stats.css?v=24">
-	<link rel="stylesheet" href="./menustyle.css?v=24">
+	<link rel="stylesheet" href="./globalstyle.css?v=26">
+	<link rel="stylesheet" href="./stats.css?v=26">
+	<link rel="stylesheet" href="./menustyle.css?v=26">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body>
@@ -204,6 +204,22 @@
 				<a>Files Loaded</a>
 			</div>
 			<div class="statsCard is-centered">
+				<a id="xmasVisited" class="countup">0</a><br>
+				<a>X-Mas Visited</a>
+			</div>
+			<div class="statsCard is-centered">
+				<a id="xmasHatchesOpened" class="countup">0</a><br>
+				<a>X-Mas Hatches Opened</a>
+			</div>
+			<div class="statsCard is-centered">
+				<a id="xmasPresentOpened" class="countup">0</a><br>
+				<a>X-Mas Presents Opened</a>
+			</div>
+			<div class="statsCard is-centered">
+				<a id="allXmasHatchesOpened" class="countup">0</a><br>
+				<a>All X-Mas Hatches Opened</a>
+			</div>
+			<div class="statsCard is-centered">
 				<a id="gf" class="countup">99999</a><br>
 				<a>Amount of Times my GF wanted my attention while making this</a>
 			</div>
@@ -218,8 +234,8 @@
 </div>
 <script async src="https://api.countapi.xyz/hit/pokemath.online/statsVisited?callback=cb"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="./global.js?v=24"></script>
-<script src="./stats.js?v=24"></script>
+<script src="./global.js?v=26"></script>
+<script src="./stats.js?v=26"></script>
 </body>
 
 </html>
