--- a/MathGame/index.html
+++ b/MathGame/index.html
@@ -271,22 +271,8 @@
 </div>
 
 <div id="alertbox" class="alert simple-alert is-hidden-"> <!-- is-hidden if hidden-->
-	<h3>Nedtelling til Jul! <a class="date">26.11.2022</a></h3>
-	<p>Nå er det mindre enn en måned til Jul, så vi har dyttet ut en oppdatering.<br>
-	I hele desember kommer man til å kunne få tak i spesielle event pokemon! Dette kan man gjøre på 2 måter:<br><br>
-	<b>1) - Julekalenderen!</b><br>
-	I år har vi har laget en julekalender!<br>
-	En julekalenderluke kan kun åpnes på riktig dag, så pass på at du sjekker innom hver dag frem til jul!<br>
-	I kalenderen kan man få mynter, pokemon og bakgrunner.
-	<br><br>
-	<b>2) - Gaver!</b><br>
-	På oppgavesiden vil det dukke opp gaver på tilfeldige steder på siden!<br>
-	Gavene kommer etter en stund når man løser opgaver.<br>
-	Man kan få 37 forskjellige pokemon, inkludert de pokemonene man kan få i julekalenderen.<br>
-	Fra gavene vil man bare få event-pokemon, og ingen andre typer pokemon.<br>
-	Det går fortere å få gavene om man spiller på vanskeligere nivåer.<br>
-	<br>
-	Alt dette skal automatisk dukke opp på pokemath den 1. desember. Hvis det ikke dukker opp for deg, sjekk ut <a href="faq.html">FAQ-en</a> vår for hjelp.
+	<h3>Tilbake til skolen! <a class="date">22.08.2023</a></h3>
+	<p>Velkommen tilbake til et nytt skoleår!<br>
 
 </p>
 	<a class="close" onclick="closeAlert()">&times;</a>
