oppdaterte about.html

--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -196,6 +196,8 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h1>
+				<p>22.08.2023</p>
+				- Fjernet CountAPI for å laste inn enkelte elementer raskere.<br>
 				<p>25.11.2022</p>
 				- La til en feilmelding på nettlesere som ikke har JavaScript på.<br>
 				- La til jule-eventet. Du kan nå finne gaver mens du løser oppgaver.<br>
