Fikset money glitch

--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -11,10 +11,10 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="Tirco">
-	<link rel="stylesheet" href="globalstyle.css?v=27">
+	<link rel="stylesheet" href="globalstyle.css?v=28">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-	<link rel="stylesheet" href="menustyle.css?v=27">
-	<link rel="stylesheet" href="about.css?v=27">
+	<link rel="stylesheet" href="menustyle.css?v=28">
+	<link rel="stylesheet" href="about.css?v=28">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -196,6 +196,9 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h1>
+				<p>24.09.2023</p>
+				- Fjernet en "money glitch" (Error).<br>
+				- Fikset ID 1001 og 1002. De er nå listet som Legendary.<br>
 				<p>13.09.2023</p>
 				- Fjernet en bugg som ga for mange shinies.<br>
 				- La til Gen IX pokemon.<br>
@@ -453,7 +456,7 @@
 </div>
 
 	  <!--<script src="main.js?v=1"></script>>-->
-	  <script src="global.js?v=27"></script>
+	  <script src="global.js?v=28"></script>
 	  <!--<script src="cookies.js?v=1"></script>-->
 </body>
 <!-- https://icon-icons.com/users/RoundIcons/icon-sets/ Ikoner laget av RoundIcons 
