--- a/MathGame/index.html
+++ b/MathGame/index.html
@@ -274,11 +274,12 @@
 		Du finner merkene ved å trykke på den nye knappen øverst på siden.<br><br>
 		OBS! Merkene begynner å spore statistikk nå - det betyr at det du har gjort før ikke gjelder på det nåværende merket. Så om du allerede har mange vann-pokemon, vil du fortsatt måtte fange 250 av de for å få merket som krever 250.<br>
 		<br>
+		Det har også blitt laget en ny måte å se pokemonene dine på! Prøv å trykke på en av de du har i pokedexen for å bli tatt med en ny side som har oversikt over utviklingene til de ulike pokemonene.
+		<br>
 		Halloween-eventet i år er likt som i fjor, men jeg har lagt inn litt flere pokemon det går ann å fange!
 		Lykke til!<br>
 		<br>
-		Det er også gjort endringer i nivå 4 og 5. Nå trenger man kun 3 riktige svar på nivå 5 for å få en pokemon, og 4 riktige på nivå 4. Dette er for å oppmuntre spillere til å jobbe mer på disse nivåene. (Husk at du har større mulighet for shiny/legendarisk/mytisk på høyere nivåer!)
-		Mvh. PokeMorten
+		Nå er det gjort endringer på nivå 4 og 5. Nå trenger man kun 3 riktige svar på nivå 5 for å få en pokemon, og 4 riktige på nivå 4. Dette er for å oppmuntre spillere til å jobbe mer på disse nivåene. (Husk at du har større mulighet for shiny/legendarisk/mytisk på høyere nivåer!)
 	</p>
 	<a class="close" onclick="closeAlert()">&times;</a>
 	<br>
