--- a/MathGame/pokeviewer.html
+++ b/MathGame/pokeviewer.html
@@ -13,6 +13,8 @@
 	<link rel="stylesheet" href="globalstyle.css?v=28">
 	<link rel="stylesheet" href="menustyle.css?v=28">
 	<link rel="stylesheet" href="shop.css?v=28">
+	<link rel="stylesheet" href="pokeviewer.css?v=28">
+	<link rel="stylesheet" href="pokemon.css?v=28">
 </head>
 <body>
 	<div class="cookie-container" id="cookie-container">
@@ -127,23 +129,46 @@
 		</form>
 	  </div>
 <div class="main">
-	
-<div class="centercard">
-	<div class="imagecontainer">
-		<!--Image-->
+	<div id="navbar">
+		<button id="prevButton" class="navButton searchButton">
+			<div class="button-bg" id="prevButtonBG">Forrige</div>
+		</button>
+		<div class="toggle-pill-color">
+			<a class="categoryname">Shiny</a>	
+			<input type="checkbox" id="shinycheck" name="shiny">
+			<label for="shinycheck">  </label>
+		</div>
+		<input type="text" id="searchBar" placeholder="Search by Name or ID" />
+		<button id="searchButton" class="searchButton">Search</button>
+		<button id="nextButton" class="navButton searchButton">
+			<div class="button-bg" id="nextButtonBG">Neste</div>
+		</button>
 	</div>
-	<!--Pokemon Name-->
-	<!--Pokemon ID--> <!--ID Variation-->
-	<!--Type-->
-	<!--Dex information-->
-</div>
-
-
+	<div id="pokemondata">
+		<div id="poke-details">
+			<div id="prev-evolution-wrapper" class="evolution-wrapper poke-container">
+				<div class="evotitle">Utvikles fra:</div>
+			</div>
+			<div id="main-pokemon-wrapper" class="main-pokemon-wrapper poke-container">
+				
+			</div>
+			<div id="next-evolution-wrapper" class="evolution-wrapper right poke-container">
+				<div class="evotitle">Utvikles til:</div>
+			</div>
+			<br>
+	</div>
+	<div id="alternate-forms-wrapper" class="alternate-forms-wrapper">
+		<div class="evotitle">Alternative Former:</div>
+	</div>
 </div>
 <div class="botbar">
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
+	  <script src="dex_entries.js?v=28"></script>
+	  <script src="alternateforms.js?v=28"></script>
+	  <script src="evolution_relationships.js?v=28"></script>
 	  <script src="global.js?v=28"></script>
+	  <script src="pokemondata.js?v=28"></script>
 	  <script src="pokeviewer.js?v=28"></script>
 </body>
 
