la til et redeem-system

--- a/MathGame/index.html
+++ b/MathGame/index.html
@@ -268,13 +268,18 @@
 </div>
 
 <div id="alertbox" class="alert simple-alert is-hidden-"> <!-- is-hidden if hidden-->
-	<h3>Merker / Badges! <a class="date">1.10.2023</a></h3>
+	<h3>Tekniske feil...<a class="date">30.09.2023</a></h3>
+	<p>De siste dagene har vi hatt så stor pågang at det har ført til at leverandøren vår måtte stenge siden!<br>
+		Det kan ha ført til at noen av dere har mistet data... Vi minner om at det er lurt å alltid lagre en backup!<br>
+		For å lette på databruken til nettsiden har vi byttet ut alle pokemon bildene med versjoner som tar mindre plass. I teorien vil dere ikke merke mye forskjell! Takk for forståelsen.<br>
+	</p>
+	<h3>Merker / Badges! <a class="date">30.09.2023</a></h3>
 	<p>Nå har endelig "Badges" kommet til PokeMath.<br>
 		Disse merkene kan låses opp mens du spiller spillet. I seg selv så har ikke merkene noen verdi annet en at det gir de som har spilt veldig mye noe mer å jobbe mot.
 		Du finner merkene ved å trykke på den nye knappen øverst på siden.<br><br>
 		OBS! Merkene begynner å spore statistikk nå - det betyr at det du har gjort før ikke gjelder på det nåværende merket. Så om du allerede har mange vann-pokemon, vil du fortsatt måtte fange 250 av de for å få merket som krever 250.<br>
 		<br>
-		Det har også blitt laget en ny måte å se pokemonene dine på! Prøv å trykke på en av de du har i pokedexen for å bli tatt med en ny side som har oversikt over utviklingene til de ulike pokemonene.
+		Det har også blitt laget en ny måte å se pokemonene dine på! Prøv å trykke på en av de du har i pokedexen for å bli tatt med en ny side som har oversikt over utviklingene til de ulike pokemonene, og alle de alternative versjoene av pokemonen man kan finne!
 		<br>
 		Halloween-eventet i år er likt som i fjor, men jeg har lagt inn litt flere pokemon det går ann å fange!
 		Lykke til!<br>
