--- a/MathGame/redeem.html
+++ b/MathGame/redeem.html
@@ -128,11 +128,11 @@
 <div class="main">
 	<div class="redemptionContainer">
 		<form id="redemptionForm">
-		  <input type="text" id="secretCodeInput" placeholder="Enter your secret code">
-		  <button type="button" onclick="checkCode()">Redeem</button>
+		  <input type="text" id="secretCodeInput" autocomplete="off" placeholder="Skriv inn koden.">
+		  <button type="button" onclick="checkCode()">Aktiver</button>
 		</form>
 		<div id="response"></div>
-	  </div>
+	</div>
 </div>
 
 <div class="botbar">
@@ -140,6 +140,7 @@
 </div>
 
 <script src="global.js?v=28"></script>
+<script src="pokestuff.js?v=28"></script>
 <script src="redeem.js?v=28"></script>
 </body>
 
