fixes & updates - wow this is good documentation

--- a/MathGame/about.html
+++ b/MathGame/about.html
@@ -201,11 +201,19 @@
 		</div>
 		<article class="content">
 			<h2 class="section-title">Nyheter</h2>
-				<p>01.10.2023</p>
+				<p>30.09.2023</p>
 				- La til "Badges", eller "Merker" som de heter på norsk. <br>
 				- La til flere høst/halloween pokemon.<br>
 				- Fikset noen småfeil på siden.<br>
 				- Gjorde slik at nivå 4 og 5 trenger færre oppgaver løst for å få en pokemon.<br>
+				- La til et kode-system hvor jeg kan gi ut gaver basert på hemmelige ord.<br>
+				- La til sporing på hvor mange oppgaver som er gjort i dag, den siste uken og den siste måneden. (Denne blir ikke sendt inn til meg, men kan brukes av lærere for å se om du har gjort det du skal) - Sporingen blir IKKE lagret hvis du bruker "lagre/last inn" funksjonen, så ikke bruk den rett før læreren din sjekker!<br>
+				- La til flere unike pokemon.<br>
+				- La til "pokeviewer" som lar deg se utviklinger og spesielle versjoner som er linket til en pokemon.<br>
+				- Gjorde så alle bildene tar mindre lagringsplass.<br>
+				- Oppdaterte lagringssystemet for å behandle ny data.<br>
+				- Forhåpentligvis fikset feilen som gjorde at pokemath ble stengt.<br>
+				- En hemmelig kode du kan bruke i det nye kode-systemet (hvis du finner det) er "Greed". :) Pass på store og små bokstaver. :)<br>
 				<p>24.09.2023</p>
 				- Fjernet en "money glitch" (Error).<br>
 				- Fikset ID 1001 og 1002. De er nå listet som Legendary.<br>
