--- a/MathGame/pokemath.html
+++ b/MathGame/pokemath.html
@@ -95,6 +95,9 @@
 						   </div>
 						</div>
 					</div>
+					<div id="tracker" class="tracker">
+						<div id="levelDetails" class="tracker"></div>
+					</div>
 				</div>
 			</div>
 			<div class="dropdown">
