--- a/MathGame/christmas.html
+++ b/MathGame/christmas.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=29">
+	<link rel="stylesheet" href="globalstyle.css?v=32">
 	<!--<link rel="stylesheet" href="cookies.css?v=1">-->
-	<link rel="stylesheet" href="christmas.css?v=29">
+	<link rel="stylesheet" href="christmas.css?v=32">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -124,16 +124,16 @@
 	  </div>
 	  
 <div class="main">
-	<div class="above-calendar">Du kan bare åpne en luke på riktig dag. Man kan ikke åpne luker senere! </div>
+	<div class="above-calendar">God Jul </div>
+	<div></div>
 	<div class="calendar-container calendar-grid">
 		<div id="notification-container"></div>
 </div>
 
-<script src="global.js?v=29"></script>
-<script src="christmas.js?v=29"></script>
-<script src="pokestuff.js?v=29"></script>
-<script src="alternateforms.js?v=29"></script>
-<script async src="https://api.countapi.xyz/hit/pokemath.online/xmasVisited?callback=cb"></script>
+<script src="global.js?v=32"></script>
+<script src="christmas.js?v=32"></script>
+<script src="pokestuff.js?v=32"></script>
+<script src="alternateforms.js?v=32"></script>
 </body>
 
 </html>
