--- a/MathGame/index.html
+++ b/MathGame/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=29">
-	<link rel="stylesheet" href="menustyle.css?v=29">
+	<link rel="stylesheet" href="globalstyle.css?v=31">
+	<link rel="stylesheet" href="menustyle.css?v=31">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<meta name="title" content="Pokemath">
 	<meta name="description" content="En nettside hvor man kan øve på de fire regneartene og få informasjon om ulike pokemon når man løser nok oppgaver.">
@@ -268,31 +268,19 @@
 </div>
 
 <div id="alertbox" class="alert simple-alert is-hidden-"> <!-- is-hidden if hidden-->
-	<h3>Tekniske feil...<a class="date">30.09.2023</a></h3>
-	<p>De siste dagene har vi hatt så stor pågang at det har ført til at leverandøren vår måtte stenge siden!<br>
-		Det kan ha ført til at noen av dere har mistet data... Vi minner om at det er lurt å alltid lagre en backup!<br>
-		For å lette på databruken til nettsiden har vi byttet ut alle pokemon bildene med versjoner som tar mindre plass. I teorien vil dere ikke merke mye forskjell! Takk for forståelsen.<br>
-	</p>
-	<h3>Merker / Badges! <a class="date">30.09.2023</a></h3>
-	<p>Nå har endelig "Badges" kommet til PokeMath.<br>
-		Disse merkene kan låses opp mens du spiller spillet. I seg selv så har ikke merkene noen verdi annet en at det gir de som har spilt veldig mye noe mer å jobbe mot.
-		Du finner merkene ved å trykke på den nye knappen øverst på siden.<br><br>
-		OBS! Merkene begynner å spore statistikk nå - det betyr at det du har gjort før ikke gjelder på det nåværende merket. Så om du allerede har mange vann-pokemon, vil du fortsatt måtte fange 250 av de for å få merket som krever 250.<br>
-		<br>
-		Det har også blitt laget en ny måte å se pokemonene dine på! Prøv å trykke på en av de du har i pokedexen for å bli tatt med en ny side som har oversikt over utviklingene til de ulike pokemonene, og alle de alternative versjoene av pokemonen man kan finne!
-		<br>
-		Halloween-eventet i år er likt som i fjor, men jeg har lagt inn litt flere pokemon det går ann å fange!
-		Lykke til!<br>
-		<br>
-		Nå er det gjort endringer på nivå 4 og 5. Nå trenger man kun 3 riktige svar på nivå 5 for å få en pokemon, og 4 riktige på nivå 4. Dette er for å oppmuntre spillere til å jobbe mer på disse nivåene. (Husk at du har større mulighet for shiny/legendarisk/mytisk på høyere nivåer!)
+	<h3>God Jul!<a class="date"> 1.12.2023</a></h3>
+	<p>NÅ skal endelig kalenderen fungere som den skal!<br>
+		Det kan hende at den bruker litt tid på å laste inn for noen...<br><br>
+		Vi ønsker dere alle en god jul!<br>
+		
 	</p>
 	<a class="close" onclick="closeAlert()">&times;</a>
 	<br>
 	- Mvh. PokeMorten
 	<br>
 </div>
-	  <script src="global.js?v=29"></script>
-	  <script src="menu.js?v=29"></script>
+	  <script src="global.js?v=31"></script>
+	  <script src="menu.js?v=31"></script>
 </body>
 
 </html>
