--- a/MathGame/faq.html
+++ b/MathGame/faq.html
@@ -10,8 +10,8 @@
 	<meta name="robots" content="noindex, nofollow">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="author" content="Tirco">
-	<link rel="stylesheet" href="globalstyle.css?v=31">
-	<link rel="stylesheet" href="faq.css?v=31">
+	<link rel="stylesheet" href="globalstyle.css?v=40">
+	<link rel="stylesheet" href="faq.css?v=40">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<!-- <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma> -->
 </head>
@@ -170,7 +170,7 @@
 		<div class="panel-content">
 			<p>PokeMath tjener ikke penger, med unntak av donasjoner fra lærere og foreldre som setter pris på arbeidet.<br>
 			Faktisk så taper vi penger på å ha siden oppe, men det er heldigvis ikke mye.</p>
-			<p>Vi betaler ca. 100kr i måneden for å holde siden oppe.<br>
+			<p>Vi betaler ca. 200kr i måneden for å holde siden oppe.<br>
 			Ettersom vi ikke vil ha reklame på nettsiden, og nettsiden ikke koster penger å ta i bruk, så tjener vi ingenting på nettsiden.</p>
 		</div>
 	  </div>
@@ -181,7 +181,7 @@
 		<label for="q4" class="panel-title">Jeg har mistet alle mine pokemon. Kan jeg få de tilbake?</label>
 		<div class="panel-content">
 			<p>Hvis du er uheldig og har slettet alle dine pokemon, så er det dessverre ingenting vi kan gjøre.<br>
-			All brukerdata er lagret på din egen enhet, og blir ikke sendt inn til oss. På denne måten ungår vi store GDPR problemer.<br>
+			All brukerdata er lagret på din egen enhet, og blir ikke sendt inn til oss. På denne måten unngår vi store GDPR problemer.<br>
 		<br>Det eneste håpet du har, er om du har en gammel nedlastet lagringsfil fra <ins><a href="./saveandload.html">lagre og last opp</a></ins> funksjonen.</p>
 		</div>
 	  </div>
@@ -241,7 +241,7 @@
 	<a id="update-log" class="align-right" href="about.html#news">Nytt</a>
 </div>
 
-<script src="global.js?v=31"></script>
+<script src="global.js?v=40"></script>
 </body>
 
 </html>
