--- a/MathGame/index.html
+++ b/MathGame/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pokémath</title>
-	<link rel="stylesheet" href="globalstyle.css?v=31">
-	<link rel="stylesheet" href="menustyle.css?v=31">
+	<link rel="stylesheet" href="globalstyle.css?v=40">
+	<link rel="stylesheet" href="menustyle.css?v=40">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<meta name="title" content="Pokemath">
 	<meta name="description" content="En nettside hvor man kan øve på de fire regneartene og få informasjon om ulike pokemon når man løser nok oppgaver.">
@@ -268,10 +268,11 @@
 </div>
 
 <div id="alertbox" class="alert simple-alert is-hidden-"> <!-- is-hidden if hidden-->
-	<h3>God Jul!<a class="date"> 1.12.2023</a></h3>
-	<p>NÅ skal endelig kalenderen fungere som den skal!<br>
-		Det kan hende at den bruker litt tid på å laste inn for noen...<br><br>
-		Vi ønsker dere alle en god jul!<br>
+	<h3>God Sommer!<a class="date"> 10.06.2024</a></h3>
+	<p>Vi nærmer oss slutten på enda et skoleår!<br>
+		Minner om at det er lurt å lagre en backup med <ins><a href="./saveandload.html">lagre og last opp</a></ins> verktøyet!<br><br>
+		Vi minner også om at de vanligste spørsmålene kan man få svar på i vår <ins><a href="./faq.html">FAQ</a></ins> 
+		Vi ønsker dere alle en riktig god ferie!<br>
 		
 	</p>
 	<a class="close" onclick="closeAlert()">&times;</a>
@@ -279,8 +280,8 @@
 	- Mvh. PokeMorten
 	<br>
 </div>
-	  <script src="global.js?v=31"></script>
-	  <script src="menu.js?v=31"></script>
+	  <script src="global.js?v=40"></script>
+	  <script src="menu.js?v=40"></script>
 </body>
 
 </html>
